	document structure" sections to reduce need for forward function
	declarations.
	* info/session.c (file_buffer_of_window, node_printed_rep): Moved
	between files.

	* info/indices.c (info_virtual_index),
	* info/nodemenu.c (nodemenu_format_info),
	* info/session.c (info_select_reference, info_follow_menus): Remove
	unused local variables.

2014-09-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/display.c (display_scroll_region): New function.
	(display_scroll_display): Call it if the terminal supports setting a
	scrolling region.

	* info/terminal.c (terminal_scroll_region): New function.
	(terminal_can_scroll_region): New variable.
	(term_cs, term_SF, term_SR): New variables.
	(terminal_initialize_terminal): Set them.
	
	* info/window.c (set_window_pagetop): Pass top and bottom of
	window being scrolled to display_scroll_display.

	* info/display.c (display_update_window_1): Correct length argument
	passed to display_node_text.

2014-09-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (forward_move_node_structure)
	(backward_move_node_structure): Disable for internal nodes.
	(forward_move_node_structure) <scroll-behaviour=Continous>: Detect if
	we are at the last node even if it does not have its Up pointer going
	to "Top".
	* info/session.h (SLN_Scroll, SLN_Top),
	* doc/info-stnd.texi (Variables) <scroll-last-node>,
	* info/session.c (scroll_last_node_choices): 'Scroll' option removed,
	as a non-index node with a menu will never be the last node.
	* info/t/last-node-not-top-level.sh: New test.
	* info/t/infodir/last-node-not-top-level.info: New file.

	* info/session.c (select_menu_digit): Don't print any error messages.
	(info_menu_digit): Display error message if there is no menu in
	the node.

	* doc/info-stnd.texi (Variables) <cursor-movement-scrolls>
	<scroll-behaviour>: cursor-movement-scrolls=On by default.

	* info/infodoc.c (info_find_or_create_help_window): Look for help